Changed owl nav buttons to stop overflow on smaller screens

--- a/css/colors/default.css
+++ b/css/colors/default.css
@@ -146,44 +146,4 @@ flex-wrap: wrap;
 	background: #242B55;
 }
 
-.owl-carousel .owl-nav{
-    overflow: hidden;
-    height: 0px;
-  }
 
-  .owl-theme .owl-dots .owl-dot.active span, 
-  .owl-theme .owl-dots .owl-dot:hover span {
-      background: #2caae1;
-  }
-
-
-  .owl-carousel .item {
-      text-align: center;
-  }
-  .owl-carousel .nav-btn{
-      height: 47px;
-      position: absolute;
-      width: 26px;
-      cursor: pointer;
-      top: 40% !important;
-	  font-size:45px;
-  }
-
-  .owl-carousel .owl-prev.disabled,
-  .owl-carousel .owl-next.disabled{
-    pointer-events: none;
-    opacity: 0.2;
-  }
-
-  .owl-carousel .prev-slide{
-      left: -33px;
-  }
-  .owl-carousel .next-slide{
-      right: -33px;
-  }
-  .owl-carousel .prev-slide:hover{
-     background-position: 0px -53px;
-  }
-  .owl-carousel .next-slide:hover{
-    background-position: -24px -53px;
-  }
