--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ Version: 1.0
  * Contact area
  * Footer area
  * Scroll to top
+ * Owl Carousel
+
 **/
 
 html,body,*:before,*:after{
@@ -1208,4 +1210,50 @@ transform: translate(0,-50%);
     overflow: visible;
     background: #fff url('images/loader.gif') no-repeat center center;
 }
-/* END of Pre Loader Style */
+/* END of Pre Loader Style */		
+
+
+/* Owl Carousel */
+.owl-carousel .owl-nav{
+    overflow: hidden;
+    height: 0px;
+  }
+
+  .owl-theme .owl-dots .owl-dot.active span, 
+  .owl-theme .owl-dots .owl-dot:hover span {
+      background: #2caae1;
+  }
+
+
+  .owl-carousel .item {
+      text-align: center;
+  }
+  .owl-carousel .nav-btn{
+      height: 47px;
+      position: absolute;
+      width: 26px;
+      cursor: pointer;
+      top: 40% !important;
+	  font-size:45px;
+  }
+
+  .owl-carousel .owl-prev.disabled,
+  .owl-carousel .owl-next.disabled{
+    pointer-events: none;
+    opacity: 0.2;
+  }
+
+  .owl-carousel .prev-slide{
+      left: -13px;
+  }
+  .owl-carousel .next-slide{
+      right: -13px;
+  }
+  .owl-carousel .prev-slide:hover{
+     background-position: 0px -53px;
+  }
+  .owl-carousel .next-slide:hover{
+    background-position: -24px -53px;
+  }
+
+  /* End of Owl Carousel */
